@@ -14942,4 +14942,18 @@ Subject length lower bound = 0
         End
 ------------------------------------------------------------------
 
+/(A*)\E+/B,auto_callout
+------------------------------------------------------------------
+        Bra
+        Callout 255 0 7
+        SCBra 1
+        Callout 255 1 2
+        A*
+        Callout 255 3 0
+        KetRmax
+        Callout 255 7 0
+        Ket
+        End
+------------------------------------------------------------------
+
 # End of testinput2 
